# refinery-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/hooks/: coordination-check.sh
.claude/skills/: edgar-debug.md  finnhub-debug.md  fred-debug.md  reddit-debug.md  twelvedata-debug.md
.claude/skills/peek-sheets/: SKILL.md
.claude/skills/peek-sheets/scripts/: read_tab.py
.cursor/: hooks.json
.cursor/rules/: python-style.mdc
.github/templates/: PULL_REQUEST_TEMPLATE.md
.github/templates/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dependabot-auto-merge.yml  dependabot-auto-update.yml  release.yaml  test.yaml
docs/plan/: FRED.md
docs/project/: ARCHITECTURE.md  DECISIONS.md  WORK.md
docs/reference/: metrics.md
docs/superpowers/plans/: 2026-04-22-alpaca-client.md  2026-04-22-finnhub-client.md  2026-04-22-twelvedata-integration.md
docs/superpowers/specs/: 2026-04-22-alpaca-client-design.md  2026-04-22-finnhub-client-design.md  2026-04-22-twelvedata-integration-design.md
scheduler/: com.ivan-rivera.refinery-pipeline.plist
src/: config.py  console.py  constants.py  pipeline.py
src/components/filter/: __init__.py  basic.py  protocol.py
src/components/transform/: __init__.py  basic.py  protocol.py
src/integrations/: __init__.py
src/integrations/alpaca/: __init__.py  client.py
src/integrations/edgar/: __init__.py  client.py
src/integrations/finnhub/: __init__.py  client.py
src/integrations/fred/: __init__.py  client.py
src/integrations/reddit/: __init__.py  client.py
src/integrations/sheets/: __init__.py  client.py
src/integrations/twelvedata/: client.py
src/pipelines/: shortlist.py  trade.py
src/schemas/: __init__.py  edgar.py  finnhub.py  fred.py  reddit.py  sheets.py
tests/: config_test.py  conftest.py  pipeline_test.py
tests/components/filter/: __init__.py  basic_test.py
tests/components/transform/: basic_test.py
tests/integrations/: edgar_test.py  fred_test.py
tests/integrations/alpaca/: client_test.py
tests/integrations/finnhub/: client_test.py
tests/integrations/reddit/: client_test.py
tests/integrations/sheets/: client_test.py
tests/integrations/twelvedata/: client_test.py
tests/pipelines/: shortlist_test.py  trade_test.py
tests/schemas/: reddit_test.py  sheets_test.py
